<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/menu_item_edit"
        android:contentDescription="@string/cd_menu_item_edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_item_delete"
        android:icon="@drawable/ic_delete"
        android:contentDescription="@string/cd_menu_item_delete"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_complete"
        android:title="@string/menu_item_complete"
        android:icon="@drawable/ic_tick"
        android:contentDescription="@string/cd_menu_item_complete"
        app:showAsAction="never"/>
</menu>
