<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction" >

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_swap"
        android:title="@string/top_app_bar_sort"
        android:contentDescription="@string/cd_top_app_bar_sort"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/top_app_bar_search"
        android:contentDescription="@string/cd_top_app_bar_search"
        app:showAsAction="always|collapseActionView"
        app:actionLayout="@layout/toolbar_search_expanded" />

</menu>